
Version 1.9 -> 1.9.1 Sungma

- Improved proof object output
- Added optional recording of selected given clauses in the proof
  object
- New auto modes (including one bred heuristic)
- Fixed bug in formula simplification involving P=>/<=>$false
- Added given clause recording and taining example generation
- Various cleanups and additional compile time warnings
- More detailed proof graphs


Version 1.9pre016 -> 1.9 Sourenee

- Fixed Auto-SInE to never SInE if there is no seed to SInE on
- Added output of proof graphs in GraphViz/dot format (coloured, too!)
- Added derivation output for CNFization
- Fiexed minor bug in proof output


Version 1.8 -> 1.9pre016

- Fixed bug that caused proof output to fail in rare cases when the
  proof was found in preprocessing.
- Took out "theory(equality)" from TSTP-output, since FOL-EQ is now
  assumed the default logic.
- Improved proof objects (taking out empty "quote" steps).
- Added plenty of new literal selection functions.
- Updated auto-modes


Version 1.7 -> 1.8 Gopaldhara

- Added support for internal proof objects (and option --proof-object)
- Added experimental support for strategy scheduling (--auto-schedule)
- Minor cleanup and improved auto-mode(s)

Version 1.6 -> 1.7 Jun Chiabari

- Added prototypical condensing
- Significantly improved auto-mode (note that AutoDev mode is, at the
  moment, intentionally inferior to normal auto mode - use only if you
  want to compare the effect of inferior ordering implementations!)
- Fixed non-critical (but annoying) bug in SOS strategies
- Updated eground to support FOF input (if it clausifies to EPR) and
  to handle unexpected behaviour from MiniSAT
- Added interactive batch mode to e_ltb_runner (load large spec once,
  then keep asking for the status of different theorems via
  stdin/stdout)
- Added enormalize for normalization of terms, clauses and formulas
  with an oriented rule set without regard for orderings.
- Various minor updates and bugfixes
